--- a/.github/workflows/rooster.yml
+++ b/.github/workflows/rooster.yml
@@ -1,23 +1,33 @@
-name: Rooster (manual sanity)
+name: 🐓 Rooster Job Hunter (Auto)
 
 on:
-  workflow_dispatch: {}
+  schedule:
+    # Run twice a day — 06:00 and 14:00 UTC (09:00 and 17:00 Israel time)
+    - cron: "0 6,14 * * *"
+  workflow_dispatch: {}  # allows manual run from GitHub UI
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install deps
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Stage 1 sanity
+
+      - name: Run Rooster job search
         env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
           GOOGLE_CSE_ID: ${{ secrets.GOOGLE_CSE_ID }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python -m rooster.main
