--- a/.github/workflows/rooster.yml
+++ b/.github/workflows/rooster.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run twice a day — 06:00 and 14:00 UTC (09:00 and 17:00 Israel time)
     - cron: "0 6,14 * * *"
-  workflow_dispatch: {}  # allows manual run from GitHub UI
+  workflow_dispatch: {}
 
 jobs:
   run:
@@ -12,6 +12,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Download previous DB (if exists)
+        uses: actions/download-artifact@v4
+        with:
+          name: rooster-db
+          path: data
+        continue-on-error: true  # ignore if it doesn't exist yet
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,3 +38,10 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python -m rooster.main
+
+      - name: Upload updated DB
+        uses: actions/upload-artifact@v4
+        with:
+          name: rooster-db
+          path: data/jobs.db
+          retention-days: 90
